--- a/Terzo_Anno/Tecnologie_Web/Compiti/5_JAVASCRIPT/esercizio_javascript.html
+++ b/Terzo_Anno/Tecnologie_Web/Compiti/5_JAVASCRIPT/esercizio_javascript.html
@@ -34,6 +34,6 @@
 		</div>
 	</main>
 </body>
-	<script src="vostraemail.js" type="text/javascript"></script>
+	<script src="francesco.valentin11@studio.unibo.it.js" type="text/javascript"></script>
 
 </html>
